--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -4,3 +4,34 @@
 .center-col{
   text-align: center;
 }
+.above-row-spacing{
+  margin-top: 15px;
+}
+
+.center-buttons{
+  margin-left: 40px;
+}
+.button-image-background{
+ font-size: 270%;
+ text-align: center;
+ width: 100%;
+ height: 300px;
+ border-radius: 25px;
+ float: left;
+ background-repeat: no-repeat;
+ background-size: cover;
+ white-space: initial;
+ overflow-wrap: break-word;
+
+
+ .pic-1{
+ height: inherit;
+ color: inherit;
+ background-size: inherit;
+ display: block;
+ background-image: url(image-path('TacoBellSoftTaco.png'));
+
+
+
+}
+}
