--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -1,3 +1,46 @@
 <div class='container-fluid'>
-    <h1> Welcome to Tacolator3.0 </h1>
+    <div class='row center-col'>
+      <div class='offset-md-4 col-md-4'>
+          <h1> Welcome to Tacolator3.0 </h1>
+      </div>
+    </div>
+ <div class='offset-md-5 col-md-4 above-row-spacing'>
+    <div class='row center-col'>
+        <div class='col-sm-1 center-buttons'>
+            <button onclick="myfunction">Click Me</button>
+         </div>
+        <div class='col-sm-1'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+        <div class='col-sm-1'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+     </div>
+ </div>
+ <div class='offset-md-5 col-md-4 above-row-spacing'>
+    <div class='row center-col'>
+        <div class='col-sm-1 center-buttons'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+        <div class='col-sm-1'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+        <div class='col-sm-1'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+     </div>
+ </div>
+ <div class='offset-md-5 col-md-4 above-row-spacing'>
+    <div class='row center-col'>
+        <div class='col-sm-1 center-buttons'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+        <div class='col-sm-1'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+        <div class='col-sm-1'>
+          <button onclick="myFunction">Click Me</button>
+        </div>
+     </div>
+ </div>
 </div>
