add legal tbell images and adjust html view

--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -29,7 +29,7 @@
  color: inherit;
  background-size: inherit;
  display: block;
- background-image: url(image-path('TacoBellSoftTaco.png'));
+ background-image: url(image-path('TacoBellSoftTaco.jpg'));
 
 
 
