--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -7,13 +7,32 @@
  <div class='offset-md-5 col-md-4 above-row-spacing'>
     <div class='row center-col'>
         <div class='col-sm-1 center-buttons'>
-            <button onclick="myfunction">Click Me</button>
+            <%=image_tag("TacoBellSoftTaco.jpg", size:"100x100", alt: "example image")%>
          </div>
         <div class='col-sm-1'>
-          <button onclick="myFunction">Click Me</button>
+            <%=image_tag("Tbellcrunchy1.JPG", size:"100x100", alt: "example image")%>
         </div>
         <div class='col-sm-1'>
           <button onclick="myFunction">Click Me</button>
+        </div>
+     </div>
+ </div>
+ <div class='offset-md-5 col-md-4 above-row-spacing'>
+    <div class='row center-col'>
+        <div class='col-sm-1 center-buttons'>
+            <h6>
+             SoftTaco
+            </h6>
+         </div>
+         <div class='col-sm-1'>
+             <h6>
+             SoftTaco
+            </h6>
+        </div>
+        <div class='col-sm-1'>
+             <h6>
+             SoftTaco
+            </h6>
         </div>
      </div>
  </div>
