make picures clickable and add css spacing

--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -10,6 +10,19 @@
 
 .center-buttons{
   margin-left: 40px;
+  padding-right:100px;
+  text-align: center;
+}
+.picture-spacing{
+  margin-right: 50px;
+  margin-right: 50px;
+  padding-right:100px;
+  padding-left: 100px;
+
+}
+.image-responsive{
+ width:200px;
+ height:200px;
 }
 .button-image-background{
  font-size: 270%;
