--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -4,62 +4,70 @@
           <h1> Welcome to Tacolator3.0 </h1>
       </div>
     </div>
- <div class='offset-md-5 col-md-4 above-row-spacing'>
+ <div class='offset-md-3 col-md-9 above-row-spacing'>
     <div class='row center-col'>
-        <div class='col-sm-1 center-buttons'>
-            <%=image_tag("TacoBellSoftTaco.jpg", size:"100x100", alt: "example image")%>
+        <div class='col-md-2 picture-spacing'>
+            <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
+            size:"10x10", alt: "example image")%>
          </div>
-        <div class='col-sm-1'>
-            <%=image_tag("Tbellcrunchy1.JPG", size:"100x100", alt: "example image")%>
+         <div class='col-md-2 picture-spacing'>
+             <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
+             size:"10x10", alt: "example image")%>
         </div>
-        <div class='col-sm-1'>
-          <button onclick="myFunction">Click Me</button>
+        <div class='col-md-2 picture-spacing'>
+            <%=link_to(image_tag("cheesylocos.jpg", class: 'image-responsive'),
+            size:"10x10", alt: "example image")%>
         </div>
      </div>
  </div>
  <div class='offset-md-5 col-md-4 above-row-spacing'>
-    <div class='row center-col'>
+    <div class='row center-col center-buttons'>
         <div class='col-sm-1 center-buttons'>
             <h6>
-             SoftTaco
+            Soft Taco
             </h6>
          </div>
-         <div class='col-sm-1'>
+         <div class='col-sm-1 center-buttons'>
              <h6>
-             SoftTaco
+             Hard Taco
             </h6>
         </div>
-        <div class='col-sm-1'>
+        <div class='col-sm-1 center-buttons'>
              <h6>
-             SoftTaco
+            Cheesy Locos Tacos
             </h6>
         </div>
      </div>
  </div>
- <div class='offset-md-5 col-md-4 above-row-spacing'>
+ <div class='offset-md-3 col-md-9 above-row-spacing'>
     <div class='row center-col'>
-        <div class='col-sm-1 center-buttons'>
-          <button onclick="myFunction">Click Me</button>
+        <div class='col-md-2 picture-spacing'>
+            <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
+            size:"10x10", alt: "example image")%>
+         </div>
+         <div class='col-md-2 picture-spacing'>
+             <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
+             size:"10x10", alt: "example image")%>
         </div>
-        <div class='col-sm-1'>
-          <button onclick="myFunction">Click Me</button>
-        </div>
-        <div class='col-sm-1'>
-          <button onclick="myFunction">Click Me</button>
+        <div class='col-md-2 picture-spacing'>
+            <%=link_to(image_tag("cheesylocos.jpg", class: 'image-responsive'),
+            size:"10x10", alt: "example image")%>
         </div>
      </div>
  </div>
- <div class='offset-md-5 col-md-4 above-row-spacing'>
+ <div class='offset-md-3 col-md-9 above-row-spacing'>
     <div class='row center-col'>
-        <div class='col-sm-1 center-buttons'>
-          <button onclick="myFunction">Click Me</button>
+        <div class='col-md-2 picture-spacing'>
+            <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
+            size:"10x10", alt: "example image")%>
+         </div>
+         <div class='col-md-2 picture-spacing'>
+             <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
+             size:"10x10", alt: "example image")%>
         </div>
-        <div class='col-sm-1'>
-          <button onclick="myFunction">Click Me</button>
-        </div>
-        <div class='col-sm-1'>
-          <button onclick="myFunction">Click Me</button>
+        <div class='col-md-2 picture-spacing'>
+            <%=link_to(image_tag("cheesylocos.jpg", class: 'image-responsive'),
+            size:"10x10", alt: "example image")%>
         </div>
      </div>
- </div>
 </div>
