--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -8,31 +8,47 @@
     <div class='row center-col'>
         <div class='col-md-2 picture-spacing'>
             <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
-            size:"10x10", alt: "example image")%>
+                       size:"10x10", alt: "example image")%>
+                   <br>
+        <div class="center-buttons">
+            <h6>Soft Taco</h6>
+            <h6>$1.89</h6>
+        </div>
          </div>
          <div class='col-md-2 picture-spacing'>
+             <h5>Hard Taco</h5>
              <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
-             size:"10x10", alt: "example image")%>
+                        size:"10x10", alt: "example image")%>
+         <div class="center-buttons">
+            <h6>calories: 200</h6>
+            <h6>$1.89</h6>
+        </div>
+
         </div>
         <div class='col-md-2 picture-spacing'>
             <%=link_to(image_tag("cheesylocos.jpg", class: 'image-responsive'),
-            size:"10x10", alt: "example image")%>
+                       size:"10x10", alt: "example image")%>
+ <div class="center-buttons">
+            <h6>Cheesy Locos Tacos</h6>
+            <h6>$1.89</h6>
+        </div>
+
         </div>
      </div>
  </div>
- <div class='offset-md-5 col-md-4 above-row-spacing'>
-    <div class='row center-col center-buttons'>
-        <div class='col-sm-1 center-buttons'>
+ <div class='offset-md-4 col-md-8 above-row-spacing'>
+    <div class='row center-col'>
+        <div class='col-md-2 center-buttons'>
             <h6>
             Soft Taco
             </h6>
          </div>
-         <div class='col-sm-1 center-buttons'>
+         <div class='col-md-2 center-buttons'>
              <h6>
              Hard Taco
             </h6>
         </div>
-        <div class='col-sm-1 center-buttons'>
+        <div class='col-md-2 center-buttons'>
              <h6>
             Cheesy Locos Tacos
             </h6>
@@ -42,15 +58,15 @@
  <div class='offset-md-3 col-md-9 above-row-spacing'>
     <div class='row center-col'>
         <div class='col-md-2 picture-spacing'>
-            <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
+            <%=link_to(image_tag("fireylocos.jpg", class: 'image-responsive'),
             size:"10x10", alt: "example image")%>
          </div>
          <div class='col-md-2 picture-spacing'>
-             <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
+             <%=link_to(image_tag("smothered.jpeg", class: 'image-responsive'),
              size:"10x10", alt: "example image")%>
         </div>
         <div class='col-md-2 picture-spacing'>
-            <%=link_to(image_tag("cheesylocos.jpg", class: 'image-responsive'),
+            <%=link_to(image_tag("cantina.jpg", class: 'image-responsive'),
             size:"10x10", alt: "example image")%>
         </div>
      </div>
@@ -58,15 +74,15 @@
  <div class='offset-md-3 col-md-9 above-row-spacing'>
     <div class='row center-col'>
         <div class='col-md-2 picture-spacing'>
-            <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
+            <%=link_to(image_tag("nachogriller.jpg", class: 'image-responsive'),
             size:"10x10", alt: "example image")%>
          </div>
          <div class='col-md-2 picture-spacing'>
-             <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
+             <%=link_to(image_tag("crunchwrap.jpeg", class: 'image-responsive'),
              size:"10x10", alt: "example image")%>
         </div>
         <div class='col-md-2 picture-spacing'>
-            <%=link_to(image_tag("cheesylocos.jpg", class: 'image-responsive'),
+            <%=link_to(image_tag("ques.jpg", class: 'image-responsive'),
             size:"10x10", alt: "example image")%>
         </div>
      </div>
