change heading to buttons

--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -4,6 +4,25 @@
           <h1> Welcome to Tacolator3.0 </h1>
       </div>
     </div>
+ <div class='offset-md-3 col-md-8 above-row-spacing'>
+    <div class='row center-col'>
+        <div class='col-md-3 center-buttons'>
+            <h6>
+            Soft Taco
+            </h6>
+         </div>
+         <div class='col-md-3 center-buttons'>
+             <h6>
+             Hard Taco
+            </h6>
+        </div>
+        <div class='col-md-3 center-buttons'>
+             <h6>
+            Cheesy Locos Tacos
+            </h6>
+        </div>
+     </div>
+ </div>
  <div class='offset-md-3 col-md-9 above-row-spacing'>
     <div class='row center-col'>
         <div class='col-md-2 picture-spacing'>
@@ -16,7 +35,6 @@
         </div>
          </div>
          <div class='col-md-2 picture-spacing'>
-             <h5>Hard Taco</h5>
              <%=link_to(image_tag("Tbellcrunchy1.JPG", class: 'image-responsive'),
                         size:"10x10", alt: "example image")%>
          <div class="center-buttons">
@@ -36,19 +54,20 @@
         </div>
      </div>
  </div>
- <div class='offset-md-4 col-md-8 above-row-spacing'>
+
+ <div class='offset-md-3 col-md-8 above-row-spacing'>
     <div class='row center-col'>
-        <div class='col-md-2 center-buttons'>
+        <div class='col-md-3 center-buttons'>
             <h6>
             Soft Taco
             </h6>
          </div>
-         <div class='col-md-2 center-buttons'>
+         <div class='col-md-3 center-buttons'>
              <h6>
              Hard Taco
             </h6>
         </div>
-        <div class='col-md-2 center-buttons'>
+        <div class='col-md-3 center-buttons'>
              <h6>
             Cheesy Locos Tacos
             </h6>
