generate model for menu_item

--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -27,7 +27,7 @@
     <div class='row center-col'>
         <div class='col-md-2 picture-spacing'>
             <%=link_to(image_tag("TacoBellSoftTaco.jpg", class: 'image-responsive'),
-                       size:"10x10", alt: "example image")%>
+                       size:"10x10", alt: "example image", value:"200")%>
                    <br>
         <div class="center-buttons">
             <h6>Calories:200 Price:1.89</h6>
