--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -2,9 +2,7 @@
     <div class='row center-col'>
       <div class='offset-md-4 col-md-4'>
           <h1> Welcome to Tacolator3.0 </h1>
-          <h1> <%= @total_cals.to_s + ' calories' %> </h1>
-          <h1> <%= '$ %.2f'% @total_price %> </h1>
-      </div>
+               </div>
     </div>
     <% @menu_item.each_slice(3) do |f| %>
  <div class='col-md-12'>
@@ -27,7 +25,7 @@
                        action: 'get_increment', id: i.id)%>
         <div class="center-buttons">
             <h6>   <%=i.calories %>  </h6>
-            <h6>   <%=i.price %>  </h6>
+            <h6>   <%='$ %.2f'% i.price %>  </h6>
         </div>
         </div>
     <% end %>
@@ -36,10 +34,13 @@
      </div>
      <br><br>
      <div class='container'>
+         <h1> <%= @total_cals.to_s + ' calories' %> </h1>
+         <br>
+          <h1> <%= '$ %.2f'% @total_price %> </h1>
          <% @session_id.counts.order(:menu_item_id).each do |i| %>
              <%= i.menu_item.name %>
              <%= 'x' + i.count.to_s %>
              <%= link_to('remove', action: 'get_decrement', id: i.menu_item_id)%>
              <br>
-        <% end %>
+         <% end %>
     </div>
