--- a/app/views/index_page/home.html.erb
+++ b/app/views/index_page/home.html.erb
@@ -1,46 +1,42 @@
 <div class='container'>
     <div class='row center-col'>
-      <div class='offset-md-4 col-md-4'>
-          <h1> Welcome to Tacolator3.0 </h1>
+      <div class='offset-md-4 col-md-4 bocks col-spacing-under'>
+          <h2> Welcome to Tacolator3.0 </h2>
                </div>
     </div>
-    <% @menu_item.each_slice(3) do |f| %>
- <div class='col-md-12'>
-     <div class='row'>
-         <div class='offset-md-3 col-md-3'>
-            <% f.each do |j| %>
-            <h6>
-                <%= j.name %>
-            </h6>
-        </div>
-        <% end %>
-     </div>
- </div>
+    <% @menu_item.each_slice(4) do |f| %>
  <div class='col-md-12'>
      <div class='row'>
          <% f.each do |i| %>
-        <div class='offset-md-1 col-md-3'>
+             <div class='offset-md-1 col-md-2 col-spacing-under bocks'>
+                 <%=i.name %>
+                 <br>
             <%=link_to(image_tag(i.images, class: 'image-responsive',
                        size:"10x10", alt: "example image"),
                        action: 'get_increment', id: i.id)%>
-        <div class="center-buttons">
-            <h6>   <%=i.calories %>  </h6>
-            <h6>   <%='$ %.2f'% i.price %>  </h6>
-        </div>
-        </div>
-    <% end %>
-<% end %>
-<br>
-     </div>
-     <br><br>
-     <div class='container'>
-         <h1> <%= @total_cals.to_s + ' calories' %> </h1>
-         <br>
-          <h1> <%= '$ %.2f'% @total_price %> </h1>
-         <% @session_id.counts.order(:menu_item_id).each do |i| %>
-             <%= i.menu_item.name %>
-             <%= 'x' + i.count.to_s %>
-             <%= link_to('remove', action: 'get_decrement', id: i.menu_item_id)%>
-             <br>
+                   <br>
+                   <%='Price: $ %.2f'% i.price %>
+                   <br>
+                   <%='Calories: ' + i.calories.to_s %>
+             </div>
          <% end %>
+     <% end %>
+     </div>
+     <div class='container'>
+         <div class='row'>
+                 <div class='offset-md-3 col-md-3 bocks'>
+                  <% @session_id.counts.order(:menu_item_id).each do |i| %>
+                  <%= i.menu_item.name %>
+                  <%= 'x' + i.count.to_s %>
+                  <%= link_to('remove', action: 'get_decrement', id: i.menu_item_id)%>
+                 <br>
+                <% end %>
+                 </div>
+                 <div class ='col-md-4 bocks'>
+            <br>
+         <h3> <%='Total Calories: ' + @total_cals.to_s %> </h3>
+         <br>
+         <h3> <%= 'Total Price: $ %.2f'% @total_price %> </h3>
+                 </div>
+         </div>
     </div>
