--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -8,6 +8,11 @@
 border: 25px solid #ef1897 ;
 background: indigo;
 color:yellow;
+font-weight: bold ;
+
+}
+.link-to-color{
+color: white;
 }
 .center-col{
   text-align: center;
