fix page layout

--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -9,6 +9,7 @@ border: 25px solid #ef1897 ;
 background: indigo;
 color:yellow;
 font-weight: bold ;
+text-align: center;
 
 }
 .link-to-color{
@@ -32,8 +33,9 @@ color: white;
 
 }
 .image-responsive{
- width:130px;
- height:130px;
+ width:115px;
+ height:120px;
+ text-align: center;
 }
 .button-image-background{
  font-size: 270%;
